--- a/index.html
+++ b/index.html
@@ -178,6 +178,16 @@
                     class="text-xs text-gray-500 hover:text-gray-800 bg-gray-50 px-3 py-0.5 rounded-sm flex items-center">
                     <i class="fa-solid fa-file-pdf"></i><span class="ml-1 ">paper</span>
                   </a>
+                  <!-- arxiv -->
+                  <a href="https://arxiv.org/abs/2503.03154"
+                    class="text-xs text-gray-500 hover:text-gray-800 bg-gray-50 px-3 py-0.5 rounded-sm flex items-center">
+                    <img src="arxiv.svg" alt="arxiv" class="w-4 h-4"><span class="ml-1">arxiv</span>
+                  </a>
+                  <!-- project page -->
+                  <a href="dango/dango.html"
+                    class="text-xs text-gray-500 hover:text-gray-800 bg-gray-50 px-3 py-0.5 rounded-sm flex items-center">
+                    <i class="fa-solid fa-globe"></i><span class="ml-1">project</span>
+                  </a>
                 </div>
                 <div class="flex flex-wrap items-center gap-2">
                   <div class="flex items-center">
