--- a/dango/dango.html
+++ b/dango/dango.html
@@ -133,10 +133,11 @@
     <section class="mb-16">
       <h2 class="text-2xl font-bold mb-4">Video</h2>
       <div class="aspect-w-16 aspect-h-9">
-        <!-- Replace with your video embed code -->
-        <div class="bg-gray-100 rounded-lg p-8 text-center">
-          Video coming soon
-        </div>
+        <iframe class="w-full h-[500px] rounded-lg" src="https://www.youtube.com/embed/QA7uQpvEdEs"
+          title="Dango Demo Video" frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen>
+        </iframe>
       </div>
     </section>
 
