--- a/index.html
+++ b/index.html
@@ -188,6 +188,11 @@
                     class="text-xs text-gray-500 hover:text-gray-800 bg-gray-50 px-3 py-0.5 rounded-sm flex items-center">
                     <i class="fa-solid fa-globe"></i><span class="ml-1">project</span>
                   </a>
+                  <!-- video -->
+                  <a href="https://www.youtube.com/watch?v=QA7uQpvEdEs&t=9s"
+                    class="text-xs text-gray-500 hover:text-gray-800 bg-gray-50 px-3 py-0.5 rounded-sm flex items-center">
+                    <i class="fa-solid fa-video"></i><span class="ml-1">video</span>
+                  </a>
                 </div>
                 <div class="flex flex-wrap items-center gap-2">
                   <div class="flex items-center">
