--- a/dango/dango.html
+++ b/dango/dango.html
@@ -131,7 +131,7 @@
 
     <!-- Video Section -->
     <section class="mb-16">
-      <h2 class="text-2xl font-bold mb-4">Video</h2>
+      <h2 class="text-2xl font-bold mb-4">Video Presentation</h2>
       <div class="aspect-w-16 aspect-h-9">
         <iframe class="w-full h-[500px] rounded-lg" src="https://www.youtube.com/embed/QA7uQpvEdEs"
           title="Dango Demo Video" frameborder="0"
