--- a/index.html
+++ b/index.html
@@ -235,6 +235,11 @@
                     class="text-xs text-gray-500 hover:text-gray-800 bg-gray-50 px-3 py-0.5 rounded-sm flex items-center">
                     <i class="fa-solid fa-code"></i><span class="ml-1">code</span>
                   </a>
+                  <!-- project page -->
+                  <a href="miwa/miwa.html"
+                    class="text-xs text-gray-500 hover:text-gray-800 bg-gray-50 px-3 py-0.5 rounded-sm flex items-center">
+                    <i class="fa-solid fa-globe"></i><span class="ml-1">project</span>
+                  </a>
 
                 </div>
 
@@ -349,6 +354,11 @@
         <h1 class="text-3xl font-semibold">News 📰 <span class="ufo text-2xl">🛸</span></h1>
       </div>
       <div class="space-y-4 mt-4">
+        <div class="flex items-start">
+          <div class="text-sm font-medium text-gray-500 w-24 flex-shrink-0">Apr 2025</div>
+          <div class="flex-1 text-sm">My paper - Towards Understanding Fine-Grained Programming Mistakes and Fixing
+            Patterns in Data Science is accepted by FSE 2025 🎉. See you in Trondheim 🇳🇴!</div>
+        </div>
         <div class="flex items-start">
           <div class="text-sm font-medium text-gray-500 w-24 flex-shrink-0">Jan 2025</div>
           <div class="flex-1 text-sm">My paper - Dango: A Mixed-Initiative Data Wrangling System using Large Language
