--- a/index.html
+++ b/index.html
@@ -119,49 +119,46 @@
         <h1 class="text-3xl font-semibold">Publications 📚 <span class="sleeping-z text-2xl">💤</span></h1>
       </div>
 
-      <!-- Loading placeholder -->
-      <div id="publicationLoading" class="space-y-4 mt-4">
-        <div class="publication bg-white rounded-lg border border-gray-200 p-6">
+      <div id="publicationContent" class="space-y-4 mt-4">
+        <div class="publication bg-white rounded-lg border border-gray-200 p-6 transition-transform hover:scale-[1.02]">
           <div class="grid grid-cols-12 gap-4">
             <div class="col-span-3">
-              <div class="w-full h-32 rounded-lg bg-gray-200 animate-pulse"></div>
+              <img src="fse25.png" alt="FSE25 Project" class="w-full h-auto rounded-lg object-cover">
             </div>
             <div class="col-span-9">
-              <div class="h-6 bg-gray-200 rounded animate-pulse mb-3 w-3/4"></div>
-              <div class="h-4 bg-gray-200 rounded animate-pulse mb-2 w-1/2"></div>
-              <div class="h-4 bg-gray-200 rounded animate-pulse mb-4 w-1/3"></div>
-              <div class="flex justify-between">
-                <div class="h-6 bg-gray-200 rounded animate-pulse w-24"></div>
+              <h3 class="text-lg font-normal mb-1">Towards Understanding Fine-Grained Programming Mistakes and Fixing
+                Patterns in Data Science</h3>
+              <p class="text-sm mb-2"><strong>Wei-Hao Chen</strong>, Jia Lin Cheoh, Manthan Keim, Sabine Brunswicker,
+                Tianyi Zhang</p>
+              <p class="text-sm italic inline-block mr-2">FSE'25: Proceedings of the 33th ACM Conference on the
+                Foundations
+                of Software Engineering</p>
+              <div class="flex items-center justify-between mt-2">
                 <div class="flex space-x-2">
-                  <div class="h-6 bg-gray-200 rounded animate-pulse w-16"></div>
-                  <div class="h-6 bg-gray-200 rounded animate-pulse w-16"></div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="publication bg-white rounded-lg border border-gray-200 p-6">
-          <div class="grid grid-cols-12 gap-4">
-            <div class="col-span-3">
-              <div class="w-full h-32 rounded-lg bg-gray-200 animate-pulse"></div>
-            </div>
-            <div class="col-span-9">
-              <div class="h-6 bg-gray-200 rounded animate-pulse mb-3 w-4/5"></div>
-              <div class="h-4 bg-gray-200 rounded animate-pulse mb-2 w-2/3"></div>
-              <div class="h-4 bg-gray-200 rounded animate-pulse mb-4 w-1/4"></div>
-              <div class="flex justify-between">
-                <div class="h-6 bg-gray-200 rounded animate-pulse w-24"></div>
-                <div class="flex space-x-2">
-                  <div class="h-6 bg-gray-200 rounded animate-pulse w-16"></div>
-                  <div class="h-6 bg-gray-200 rounded animate-pulse w-16"></div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+                  <a href="fse25.pdf"
+                    class="text-xs text-gray-500 hover:text-gray-800 bg-gray-50 px-3 py-0.5 rounded-sm flex items-center">
+                    <i class="fa-solid fa-file-pdf"></i><span class="ml-1">paper(coming soon)</span>
+                  </a>
 
-      <div id="publicationContent" class="space-y-4 mt-4 hidden">
+
+                </div>
+
+                <div class="flex flex-wrap items-center gap-2">
+                  <div class="flex items-center">
+                    <span class="text-blue-500/70 mr-1">●</span>
+                    <span class="font-mono text-[9px] pt-0.5">SOFTWARE ENGINEERING</span>
+                  </div>
+
+                  <div class="flex items-center">
+                    <span class="text-orange-500/70 mr-1">●</span>
+                    <span class="font-mono text-[9px] pt-0.5">DATA SCIENCE</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
         <div class="publication bg-white rounded-lg border border-gray-200 p-6 transition-transform hover:scale-[1.02]">
           <div class="grid grid-cols-12 gap-4">
             <div class="col-span-3">
@@ -261,6 +258,8 @@
             </div>
           </div>
         </div>
+
+
         <div class="publication bg-white rounded-lg border border-gray-200 p-6 transition-transform hover:scale-[1.02]">
           <div class="grid grid-cols-12 gap-4">
             <div class="col-span-3">
@@ -412,14 +411,6 @@
       const menu = document.getElementById('mobileMenu');
       menu.classList.toggle('hidden');
     }
-
-    // Show publication content and hide loading placeholder after a delay
-    window.addEventListener('load', function () {
-      setTimeout(function () {
-        document.getElementById('publicationLoading').classList.add('hidden');
-        document.getElementById('publicationContent').classList.remove('hidden');
-      }, 1500); // 1.5 seconds delay
-    });
   </script>
 
   <!-- Add this CSS to your existing styles -->
