--- a/index.html
+++ b/index.html
@@ -77,16 +77,19 @@
               Computer/AI Interaction (HCI/HAI)</span>, particularly in building novel interactive systems that combine
             <span class="bg-sky-200 p-0.5 rounded-md text-sky-700 font-medium">Software Engineering</span> and <span
               class="bg-sky-200 p-0.5 rounded-md text-sky-700 font-medium">
-              Data Science</span>. I am currently developing tools to help data scientists using several techniques
+              Data Science</span>. I am currently developing tools to help <em>data scientists</em> and
+            <em>end-users</em>
+            using
+            several
+            techniques
             such as
             <span class="bg-sky-200 p-0.5 rounded-md text-sky-700 font-medium">LLM</span>,
             <span class="bg-sky-200 p-0.5 rounded-md text-sky-700 font-medium">Artificial Intelligence</span>, and
             <span class="bg-sky-200 p-0.5 rounded-md text-sky-700 font-medium">Programming-by-Demonstration</span>.
 
-            I have extensive UI/UX and human-centered design experience in creating tools with AI. Most of my projects
-            are system-centric, aiming to improve the efficiency and usability in a data science pipeline. Previously, I
-            have worked as an Android TV developer in Realtek Semiconductor. My previous research focuses on the
-            theoretical security and privacy of cloud storage systems.
+            I have extensive UI/UX and human-centered design experience in creating AI-powered tools. Most of my
+            projects are system-centric, aiming to improve
+            efficiency and usability within data science pipelines.
           </p>
         </div>
         <div class="md:col-span-1">
