--- a/index.html
+++ b/index.html
@@ -136,9 +136,9 @@
                 Patterns in Data Science</h3>
               <p class="text-sm mb-2"><strong>Wei-Hao Chen</strong>, Jia Lin Cheoh, Manthan Keim, Sabine Brunswicker,
                 Tianyi Zhang</p>
-              <p class="text-sm italic inline-block mr-2">FSE'25: Proceedings of the 33th ACM Conference on the
+              <p class="text-sm italic inline-block mr-2">Proceedings of the 33th ACM Conference on the
                 Foundations
-                of Software Engineering</p>
+                of Software Engineering (FSE), 2025</p>
               <div class="flex items-center justify-between mt-2">
                 <div class="flex space-x-2">
                   <a href="fse25.pdf"
