--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
       <div class="flex justify-between h-16">
         <div class="flex-shrink-0 flex items-center">
           <a href="#" class="text-xl font-normal"><strong>Wei-Hao</strong> Chen</a>
+          <p class="text-xl bg-gradient-to-r from-purple-600 to-blue-500 text-transparent bg-clip-text font-bold ml-2">
+            CS PhD student @ Purdue
+          </p>
         </div>
         <!-- Mobile menu button -->
         <div class="flex items-center md:hidden">
@@ -101,11 +104,6 @@
             <div class="md:col-span-1">
               <img src="pic.jpg" alt="Wei-Hao Chen" class="rounded-lg w-full shadow-md" />
               <div class="mt-4 space-y-2">
-                <!-- add CS PhD student @ Purdue University -->
-
-                <p class="text-sm bg-gradient-to-r from-purple-600 to-blue-500 text-transparent bg-clip-text font-bold">
-                  <i class="fa-solid fa-graduation-cap"></i> CS PhD student @ Purdue
-                </p>
                 <a href="mailto:chen4129@purdue.edu" class="flex items-center text-sm hover:text-sky-600">
                   <i class="fa-solid fa-envelope w-5 text-yellow-500"></i><span>chen4129@purdue.edu</span>
                 </a>
