--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div class="flex justify-between h-16">
         <div class="flex-shrink-0 flex items-center">
           <a href="#" class="text-xl font-normal"><strong>Wei-Hao</strong> Chen</a>
-          <p class="text-xl bg-gradient-to-r from-purple-600 to-blue-500 text-transparent bg-clip-text font-bold ml-2">
+          <p class="text-xl font-bold ml-2 gradient-text">
             CS PhD student @ Purdue
           </p>
         </div>
@@ -446,6 +446,30 @@
       animation:
         fly 8s infinite linear,
         hover 1.5s infinite ease-in-out;
+    }
+
+    .gradient-text {
+      background: linear-gradient(to right,
+          #ff6b6b,
+          #4ecdc4,
+          #45b7d1,
+          #96c93d,
+          #ff6b6b);
+      background-size: 200% auto;
+      color: transparent;
+      background-clip: text;
+      -webkit-background-clip: text;
+      animation: gradient 3s linear infinite;
+    }
+
+    @keyframes gradient {
+      0% {
+        background-position: 0% center;
+      }
+
+      100% {
+        background-position: 200% center;
+      }
     }
 
     .cursor {
