--- a/index.html
+++ b/index.html
@@ -145,9 +145,9 @@
                     of Software Engineering (FSE), 2025</p>
                   <div class="flex items-center justify-between mt-2">
                     <div class="flex space-x-2">
-                      <a href="fse25.pdf"
+                      <a href="fse2025/fse_draft.pdf"
                         class="text-xs text-gray-500 hover:text-gray-800 bg-gray-50 px-3 py-0.5 rounded-sm flex items-center">
-                        <i class="fa-solid fa-file-pdf"></i><span class="ml-1">paper(coming soon)</span>
+                        <i class="fa-solid fa-file-pdf"></i><span class="ml-1">draft</span>
                       </a>
 
 
