--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="flex-shrink-0 flex items-center">
           <a href="#" class="text-xl font-normal"><strong>Wei-Hao</strong> Chen</a>
           <p class="text-xl font-bold ml-2 gradient-text">
-            CS PhD student @ Purdue
+            CS PhD candidate @ Purdue
           </p>
         </div>
         <!-- Mobile menu button -->
@@ -71,26 +71,19 @@
           </div>
           <div class="grid grid-cols-1 md:grid-cols-4 gap-8 mt-4">
             <div class="md:col-span-3">
-              <h2 class="text-lg font-semibold mb-2 tracking-wide">Building AI-powered tools for data scientists and
-                end-users <span class="cursor">_</span></h2>
+              <h2 class="text-lg font-semibold mb-2 tracking-wide">Build AI-powered tools for data scientists,
+                developers, and end-users <span class="cursor">_</span></h2>
               <p class="text-gray-700 leading-relaxed">
-                Hello, my name is <span class="name-underline">Wei-Hao Chen</span>. I am a fourth-year Ph.D. student in
+                Hello, my name is <span class="name-underline">Wei-Hao Chen</span>. I am a Ph.D. candidate in
                 the
                 Department of Computer Science at Purdue
                 University and a member of the Human-Centered Software Systems Lab under the guidance of Professor <a
                   href="https://tianyi-zhang.github.io/" class="text-blue-500 hover:text-blue-700">Tianyi Zhang</a>. My
                 research primarily focuses on technical aspects of <span
                   class="bg-sky-200 p-0.5 rounded-md text-sky-700 font-medium">Human
-                  Computer/AI Interaction (HCI/HAI)</span>, particularly in building novel interactive systems that
-                combine
-                <span class="bg-sky-200 p-0.5 rounded-md text-sky-700 font-medium">Software Engineering</span> and <span
-                  class="bg-sky-200 p-0.5 rounded-md text-sky-700 font-medium">
-                  Data Science</span>. I am currently developing tools to help <em>data scientists</em> and
-                <em>end-users</em>
-                using
-                several
-                techniques
-                such as
+                  Computer/AI Interaction (HCI/HAI)</span>, particularly in building novel interactive systems to help
+                <em>data scientists, developers</em>, and <em>end-users</em>
+                using several techniques such as
                 <span class="bg-sky-200 p-0.5 rounded-md text-sky-700 font-medium">LLM</span>,
                 <span class="bg-sky-200 p-0.5 rounded-md text-sky-700 font-medium">Artificial Intelligence</span>, and
                 <span class="bg-sky-200 p-0.5 rounded-md text-sky-700 font-medium">Programming-by-Demonstration</span>.
@@ -126,7 +119,7 @@
             <h1 class="text-3xl font-semibold">Publications 📚 <span class="sleeping-z text-2xl">💤</span></h1>
           </div>
           <hr class="my-8 border-t border-gray-200">
-          <div id="publicationContent" class="space-y-4 mt-4">
+          <div id="publicationContent" class="space-y-2 mt-4">
             <div class="publication bg-white py-6 transition-transform hover:scale-[1.02]">
               <div>
                 <h3 class="text-lg font-normal mb-1">Towards Understanding Fine-Grained Programming Mistakes and Fixing
