--- a/index.html
+++ b/index.html
@@ -134,6 +134,14 @@
                       class="text-xs text-gray-500 hover:text-gray-800 bg-gray-50 px-3 py-0.5 rounded-sm flex items-center">
                       <i class="fa-solid fa-file-pdf"></i><span class="ml-1">draft</span>
                     </a>
+                    <a href="https://github.com/ferranschen/fse2025"
+                      class="text-xs text-gray-500 hover:text-gray-800 bg-gray-50 px-3 py-0.5 rounded-sm flex items-center">
+                      <i class="fa-solid fa-code"></i><span class="ml-1">code</span>
+                    </a>
+                    <a href="fse2025/fse2025.html"
+                      class="text-xs text-gray-500 hover:text-gray-800 bg-gray-50 px-3 py-0.5 rounded-sm flex items-center">
+                      <i class="fa-solid fa-globe"></i><span class="ml-1">project</span>
+                    </a>
                   </div>
                   <div class="flex flex-wrap items-center gap-2">
                     <div class="flex items-center">
