--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                   <div class="flex space-x-2">
                     <a href="fse2025/fse_draft.pdf"
                       class="text-xs text-gray-500 hover:text-gray-800 bg-gray-50 px-3 py-0.5 rounded-sm flex items-center">
-                      <i class="fa-solid fa-file-pdf"></i><span class="ml-1">draft</span>
+                      <i class="fa-solid fa-file-pdf"></i><span class="ml-1">preprint</span>
                     </a>
                     <a href="https://github.com/ferranschen/fse2025"
                       class="text-xs text-gray-500 hover:text-gray-800 bg-gray-50 px-3 py-0.5 rounded-sm flex items-center">
