update paper url

--- a/fse2025/fse2025.html
+++ b/fse2025/fse2025.html
@@ -37,7 +37,7 @@
         in Data Science</h1>
       <p class="text-xl mb-6">FSE 2025, June, Trondheim, Norway 🇳🇴</p>
       <div class="flex justify-center space-x-4">
-        <a href="../fse2025_mistakes.pdf"
+        <a href="fse_draft.pdf"
           class="bg-slate-500 text-white px-2 py-1 rounded-md hover:bg-slate-700 transition-colors">
           <i class="fa-solid fa-file-pdf mr-2"></i>Paper
         </a>
